[tool.poetry]
name = "dagster-experiment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.9.19"
dagit = "^0.9.19"
dagster-postgres = "^0.9.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
